<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="textPersonName"
        android:text="@string/txtTitle"
        android:textColor="#9003F4"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/txtPrints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/rad4x6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/rad4x6"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/rad5x7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrints" />

    <RadioButton
        android:id="@+id/rad5x7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/rad5x7"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/rad8x10"
        app:layout_constraintStart_toStartOf="@+id/rad4x6"
        app:layout_constraintTop_toBottomOf="@+id/rad4x6" />

    <RadioButton
        android:id="@+id/rad8x10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="25dp"
        android:text="@string/rad8x10"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnOrder"
        app:layout_constraintStart_toStartOf="@+id/rad5x7"
        app:layout_constraintTop_toBottomOf="@+id/rad5x7" />

    <EditText
        android:id="@+id/txtResult"
        android:layout_width="344dp"
        android:layout_height="29dp"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:background="@null"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="textPersonName"
        android:textColor="#9003F4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOrder" />

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="294dp"
        android:layout_height="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:text="@string/btnOrder"
        android:textColor="#9003F4"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/txtResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rad8x10" />

    <EditText
        android:id="@+id/txtPrints"
        android:layout_width="327dp"
        android:layout_height="55dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/txtPrints"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/rad4x6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>